first page complete

--- a/WEB APP/app/App1.html
+++ b/WEB APP/app/App1.html
@@ -10,20 +10,48 @@
 <style type ="text/css">
 	body{
 		background-image: url("../graphics/woman-reading-book-under-the-tree.gif");
-		background-size: contain;
-		background-attachment: fixed
-		;
+		background-size: cover;
+		
+		background-position: center;
+		background-attachment: fixed;
+	    background-repeat: no-repeat;
+		
 	}
 	</style>
+	 <meta name="viewport" 
+        content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-	<!--<div class="container">
-	<div class="bg"></div>
-		<img src="../graphics/woman-reading-book-under-the-tree.gif">
-		</div
-</div>-->
- 
   <div class="top-left">PLANTA</div>
+  <div class="top-right">login</div>
+  <div class="boxContainer">
+	<table class="elementsContainer">
+	  <tr>
+		  <td>
+		  <input type="text" placeholder="Search Planters" class="Search"></td>
+		  <td>
+			  <a href="#"><i class="material-icons"><img src="../graphics/searchicon.png" height="24dp"></i></span>
+			  </a>
+		  </td>
+		  </tr>
+	  </table>
+	</div>
+<p class="lps1" style="margin-top: 2%;">LET'S PLANT WITH US!</p>
+<p class="lps1">TOGETHER WE MAKE THE WORLD</p>
+<p class="lps1">GREEN AGAIN</p>
+<div class="ps">
+	<img src="../graphics/playstore.png" height="90" width="270" alt="Download APP on playstore">
+</div>
+
+<!--TOTAL PLANTATION-->
+<p class="tpl" style="margin-left: 9.5%; margin-top: 1%;">TOTAL</p>
+<p class="tpl">PLANTATION</p>
+<p class="tpl" style="margin-top: 0.8%; margin-left: 10.5%; font-size: 70px; color: gray;">00</p>
+
+<!--BADGES EARNED-->
+<p class="be" style="margin-right: 9.5%; margin-top: 1%;">BADGES</p>
+<p class="be">EARNED</p>
+<p class="be" style="margin-top: 0.8%; margin-right: 10.5%; font-size: 70px; color: gray;">00</p>
 </body>
 </html>
