--- a/WEB APP/app/App1.html
+++ b/WEB APP/app/App1.html
@@ -45,13 +45,16 @@
 </div>
 
 <!--TOTAL PLANTATION-->
-<p class="tpl" style="margin-left: 9.5%; margin-top: 1%;">TOTAL</p>
+<div class=alignleft>
+<p class="tpl" style="margin-left: 23%; margin-top: 1%;">TOTAL</p>
 <p class="tpl">PLANTATION</p>
-<p class="tpl" style="margin-top: 0.8%; margin-left: 10.5%; font-size: 70px; color: gray;">00</p>
-
+<p class="tpl" style="margin-top: 0.8%; margin-left: 27%; font-size: 100px; color: gray;">00</p>
+</div>
 <!--BADGES EARNED-->
-<p class="be" style="margin-right: 9.5%; margin-top: 1%;">BADGES</p>
+<div class=alignright>
+<p class="be" style="margin-top: 1%;">BADGES</p>
 <p class="be">EARNED</p>
-<p class="be" style="margin-top: 0.8%; margin-right: 10.5%; font-size: 70px; color: gray;">00</p>
+<p class="be" style="margin-top: 0.8%; font-size: 100px; color: gray;">00</p>
+</div>
 </body>
 </html>
