--- a/WEB APP/app/App1.html
+++ b/WEB APP/app/App1.html
@@ -17,6 +17,11 @@
 	    background-repeat: no-repeat;
 		
 	}
+
+	top-right{
+		a:hover{
+			
+		}	}
 	</style>
 	 <meta name="viewport" 
         content="width=device-width, initial-scale=1">
@@ -24,7 +29,9 @@
 
 <body>
   <div class="top-left">PLANTA</div>
-  <div class="top-right">login</div>
+  <a href="App2.html">
+  <div class="top-right">login
+  </div></a>
   <div class="boxContainer">
 	<table class="elementsContainer">
 	  <tr>
